RESOLVED FIXED66412
WebKit doesn't react when a WebView is moved between windows with different backing scale factors
https://bugs.webkit.org/show_bug.cgi?id=66412
Summary WebKit doesn't react when a WebView is moved between windows with different b...
Adam Roben (:aroben)
Reported 2011-08-17 14:23:58 PDT
Created attachment 104242 [details] testcase To reproduce: 1. Load the attached testcase in a window with a 1.0 backing scale factor 2. Open a window with a 2.0 backing scale factor 3. Move the WebView from the first window to the second The testcase will still say the device pixel ratio is 1, but should say it is 2.
Attachments
testcase (237 bytes, text/html)
2011-08-17 14:23 PDT, Adam Roben (:aroben)
no flags
Update the device scale factor when the WebView's window changes (31.27 KB, patch)
2011-08-18 09:30 PDT, Adam Roben (:aroben)
andersca: review+
Radar WebKit Bug Importer
Comment 1 2011-08-17 14:29:21 PDT
Adam Roben (:aroben)
Comment 2 2011-08-18 09:30:49 PDT
Created attachment 104350 [details] Update the device scale factor when the WebView's window changes
Adam Roben (:aroben)
Comment 3 2011-08-18 09:44:49 PDT
Note You need to log in before you can comment on or make changes to this bug.