Update the device scale factor when the WebView's window changes

Fixes <http://webkit.org/b/66412> <rdar://problem/9971958> WebKit doesn't react when a
WebView is moved between windows with different backing scale factors

Reviewed by Anders Carlsson.

Source/WebKit/mac:

* WebView/WebView.mm:
(-[WebView viewDidMoveToWindow]): Call setDeviceScaleFactor because our new window (or no
window at all) might have a different backing scale factor than the previous one.
(-[WebView _deviceScaleFactor]): Moved to the WebFileInternal category.

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]): Call setDeviceScaleFactor because our new window (or no
window at all) might have a different backing scale factor than the previous one.
(-[WKView _deviceScaleFactor]): Moved to the new FileInternal category.

Tools:

Test that WebKit updates style when a WebView is moved between differently-scaled windows

* TestWebKitAPI/JavaScriptTest.cpp:
(TestWebKitAPI::runJSTest): Moved a little bit of code from here...
(TestWebKitAPI::compareJSResult): ...to here. Also made the error message more similar to
gtest's built-in error messages.

* TestWebKitAPI/JavaScriptTest.h: Added overloads of runJSTest that take a WebView * and
WKView * for convenience on Mac. Added compareJSResult helper function for implementing
those overloads.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added new files.

* TestWebKitAPI/Tests/mac/DynamicDeviceScaleFactor.mm: Added.
(-[FrameLoadDelegate initWithDidFinishLoadBoolean:]): Simple initializer.
(-[FrameLoadDelegate webView:didFinishLoadForFrame:]): Record that the load finished.
(TestWebKitAPI::didFinishLoadForFrame): Record that the load finished.
(TestWebKitAPI::setPageLoaderClient): Set up the client.
(TestWebKitAPI::DynamicDeviceScaleFactor::DynamicDeviceScaleFactor): Simple constructor.
(TestWebKitAPI::DynamicDeviceScaleFactor::createWindow): Creates a
SyntheticBackingScaleFactorWindow and returns it.
(TestWebKitAPI::DynamicDeviceScaleFactor::runTest): Loads devicePixelRatio.html and checks
that WebKit uses the correct scale factor when the WebView is not in a window, is put in a
window, is moved to a differently-scaled window, and is taken out of the window.
(TestWebKitAPI::DynamicDeviceScaleFactor::loadURL): Helper function with overloads for
WebKit1 and WebKit2.
(TestWebKitAPI::TEST_F): Runs the test, with overloads for WebKit1 and WebKit2.

* TestWebKitAPI/Tests/mac/devicePixelRatio.html: Added.

* TestWebKitAPI/mac/JavaScriptTestMac.mm: Added.
(TestWebKitAPI::runJSTest): Fairly simple overloads for WebView * and WKView *.

* TestWebKitAPI/mac/SyntheticBackingScaleFactorWindow.h: Added.
* TestWebKitAPI/mac/SyntheticBackingScaleFactorWindow.m: Added.
(-[SyntheticBackingScaleFactorWindow initWithContentRect:styleMask:backing:defer:]): Simple
initializer.
(-[SyntheticBackingScaleFactorWindow setBackingScaleFactor:]): Simple setter.

(-[SyntheticBackingScaleFactorWindow backingScaleFactor]):
(-[SyntheticBackingScaleFactorWindow userSpaceScaleFactor]):
Overrides of NSWindow methods that WebKit uses to determine the device scale factor.

Canonical link: https://commits.webkit.org/82311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93315 268f45cc-cd09-0410-ab3c-d52691b4dbfc